Fixed bugs and changed scrollbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,26 @@
+::-webkit-scrollbar {
+    width: 12px;
+    /* width of the entire scrollbar */
+}
+
+::-webkit-scrollbar-track {
+    background-color: whitesmoke;
+    /* color of the tracking area */
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #4c1f77;
+    border-radius: 20px;
+    border: 3px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #400279;
+    border-width: 2.5px;
+}
+
+
 /* Navbar Effects */
 
 nav {
